# cff-channel

./: .gitignore  README.md
.github/workflows/: cffi-channel.yml  ci.yml
crates/cffi-channel/: Cargo.toml  Makefile  Makefile.win.mk  build.rs
crates/cffi-channel/csrc/: CMakeLists.txt  callback.c  callback.h
crates/cffi-channel/libs/: libcallback.dylib
crates/cffi-channel/src/: lib.rs
